[tool.poetry]
name = "eth-daily-archiver"
version = "0.1.0"
description = "Ethereum daily discussion thread archiver github action"
authors = ["Wolf <sybilwolf@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
urs = { git = "https://github.com/sybilwolf/URS.git", rev = "master" }
